# Normal-Map-Generator

./: .gitignore  CMakeLists.txt  README.md
include/: app.cuh  main.cuh  normal_map_generator.cuh
include/core/: app.cuh  app.h  app_data.h  image_utils.cuh  image_utils.h  main.h  normal_map_generator.cuh  user_interface.h
resources/: imgui.ini
settings/: imgui.ini
src/: app.cu  main.cpp  main.cu  normal_map_generator.cu
src/core/: app.cpp  app.cu  image_utils.cpp  image_utils.cu  normal_map_generator.cu  user_interface.cpp
